@@ -54,3 +54,7 @@ DiFX version 1.5.1 & 1.5.2
 Version 0.8
 ~~~~~~~~~~~
 Do better job expanding "entities" in XML formation
+ - do expansion more universally
+ - encode ascii values 1-31 in [[]] so they can be idenfied and not crash parsers
+Add new Mark5 States: Test TestWrite and TestRead
+
